# Ticket-Resolution-Agent

./: README.md  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/: graph.py  main.py  models.py
src/nodes/: classifier.py  drafter.py  escalate.py  retriever.py  reviewer.py
src/sample_docs/: billing.txt  general.txt  security.txt  technical.txt
