[project]
name = "ticket-resolution-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langgraph>=0.5.4",
    "langgraph-cli[inmem]>=0.3.5",
    "openai>=1.97.1",
]
